    + [RA] Ensure we close the pipe to lintian-info before exiting, since
      otherwise lintian-info may print the rest of our output after
      lintian exits, producing confusing output interleaved with the
      shell prompt.  (Closes: #496295)
    + [FL] Actually make package version available to output formatters.
      Currently used only by experimental colon-separated output.
  
  * lib/Tags/ColonSeparated.pm:
    + [FL] Update for new features and make a little bit easier to read
      for humans:
      - Update the format to include the new severity/certainty info.
      - Include information whether the tag is experimental.
      - Move the detailled override info to the end but include info
        flag about the override status in the same column that also
        includes the experimental flag info.
  
  * t/runtests:
    + [FL] Copy the changes to testset/runtests from JP's branch.
    + [RA] Fix single test mode.

 -- Frank Lichtenheld <djpig@debian.org>  Sat, 23 Aug 2008 22:55:44 +0200

lintian (1.24.4) unstable; urgency=low

  The "[JP] is Jordà Polo" release.
  
  * checks/*.desc:
    + [JP] Update, fix and unify various manual references. 
  * checks/copyright-file:
    + [ADB] Don't flag copyright files using phrases such as "previously
      distributed under the GNU GPL" as lacking a reference to the license.
      Thanks Raphael Geissert.
  * checks/cruft{,.desc}:
    + [FL] Add new check for outdated libtool files.
      (Closes: #293296)
    + [FL] Don't exclude all of lintian, but only files in the test suites.
  * checks/files{,.desc}:
    + [ADB] Don't warn about embedded Javascript libraries in the package
      that actually provides the library. Thanks Raphael Geissert for
      pointing out the problem.  (Closes: #494577)
    + [ADB] Enhance the description of package-contains-empty-directory to
      mention how to remove such directories when building the package.
      Thanks Chris Lamb.  (Closes: #495153)